# iaso-to-superset

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/iaso_to_superset/: iaso_etl.py
src/iaso_to_superset.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
